Updated formatting of helpers
- improving readability

--- a/themes/helpers/data/comments.mdx
+++ b/themes/helpers/data/comments.mdx
@@ -1,11 +1,9 @@
 ---
-title: "Comments"
+title: "comments"
 description: 'Usage: `{{comments}}`'
 ---
 
 ***
-
-## Description
 
 The `{{comments}}`helper outputs Ghost’s member-based commenting system. [Learn more about comments.](https://ghost.org/help/commenting)
 
