--- a/themes/helpers/data/content.mdx
+++ b/themes/helpers/data/content.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Content"
+title: "content"
 description: 'Usage: `{{content}}`'
 ---
 
 ***
 
-### Description
 
 `{{content}}` is a very simple helper used for outputting post content. It makes sure that your HTML gets output correctly.
 
