--- a/themes/helpers/data/excerpt.mdx
+++ b/themes/helpers/data/excerpt.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Excerpt"
+title: "excerpt"
 description: 'Usage: `{{excerpt}}`'
 ---
 
 ***
 
-### Description
 
 `{{excerpt}}` outputs content but strips all HTML. This is useful for creating excerpts of posts.
 
