--- a/themes/helpers/data/img_url.mdx
+++ b/themes/helpers/data/img_url.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Img_url"
+title: "img_url"
 description: 'Usage: `{{img_url value}}`'
 ---
 
 ***
 
-### Description
 
 The img url helper outputs the correctly calculated URL for the provided image property.
 
