--- a/themes/helpers/data/link.mdx
+++ b/themes/helpers/data/link.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Link"
+title: "link"
 description: 'Usage: `{{#link href="/about/"}}About{{/link}}`'
 ---
 
 ***
 
-### Description
 
 `{{#link}}` is a block helper that creates links with dynamic classes. In its basic form it will create an anchor element that wraps around any kind of string, HTML or handlebars constructed HTML.
 
