--- a/themes/helpers/data/meta_data.mdx
+++ b/themes/helpers/data/meta_data.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Meta Data"
+title: "meta data"
 description: 'Usage: `{{meta_title}}` and `{{meta_description}}` and `{{canonical_url}}`'
 ---
 
 ***
 
-### Description
 
 Ghost generates automatic meta data by default, but it can be overridden with custom content in the post settings menu. Meta data is output by default in [ghost\_head](/themes/helpers/utility/ghost_head_foot/), and can also be used in themes with the following helpers:
 
