--- a/themes/helpers/data/post.mdx
+++ b/themes/helpers/data/post.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Post"
+title: "post"
 description: 'Usage: `{{#post}}{{/post}}` or `{{#foreach posts}}{{/foreach}}`'
 ---
 
 ***
 
-## Description
 
 When on a single post template such as `post.hbs` or `page.hbs`, outputting the details of your posts can be done with a block expression.
 
