--- a/themes/helpers/data/price.mdx
+++ b/themes/helpers/data/price.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Price"
+title: "price"
 description: 'Usage: `{{price plan}}`'
 ---
 
 ***
 
-### Description
 
 The `{{price}}` helper formats monetary values from their smallest denomination to a human readable denomination with currency formatting. Example:
 
