--- a/themes/helpers/data/recommendations.mdx
+++ b/themes/helpers/data/recommendations.mdx
@@ -1,11 +1,9 @@
 ---
-title: "Recommendations"
+title: "recommendations"
 description: 'Usage: `{{recommendations}}`'
 ---
 
 ***
-
-## Description
 
 Use the `{{recommendations}}` helper anywhere in a theme to output a list of recommended sites as configured in Ghost Admin.
 
