--- a/themes/helpers/data/site.mdx
+++ b/themes/helpers/data/site.mdx
@@ -1,5 +1,5 @@
 ---
-title: "@Site"
+title: "@site"
 description: 'The `@site` property provides access to global settings, which are available anywhere in your theme:'
 ---
 
