--- a/themes/helpers/data/social_url.mdx
+++ b/themes/helpers/data/social_url.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Social_url"
+title: "social_url"
 description: 'Usage: `{{social_url type="platform"}}` (e.g., `{{social_url type="facebook"}}`, `{{social_url type="bluesky"}}`)'
 ---
 
 ***
 
-### Description
 
 The `{{social_url}}` helper generates a URL for a specified social media platform based on the provided platform type. It takes a single argument, `type`, which specifies the social media platform (e.g., `facebook`, `mastodon`, etc.). The helper looks for the specified platform in the given context (usually author) and constructs the appropriate URL.
 
