--- a/themes/helpers/data/tiers.mdx
+++ b/themes/helpers/data/tiers.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Tiers"
+title: "tiers"
 description: "Usage: `{{tiers}}`/ `{{tiers prefix=\":\" separator=\" - \" lastSeparator=\", \" suffix='options'}}`"
 ---
 
 ***
 
-### Description
 
 `{{tiers}}`is a formatting helper for outputting tier names. It defaults to a comma-separated list with `and` as the last separator and `tier(s)` as the suffix. Customize the helper by using a custom prefix, separator, last separator, and/or suffix. Note that values are white-space sensitive.
 
