--- a/themes/helpers/data/title.mdx
+++ b/themes/helpers/data/title.mdx
@@ -1,10 +1,9 @@
 ---
-title: "Title"
+title: "title"
 description: 'Usage: `{{title}}`'
 ---
 
 ***
 
-### Description
 
 The title helper outputs a post title ensuring it displays correctly.
