--- a/themes/helpers/data/total_members.mdx
+++ b/themes/helpers/data/total_members.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Total_members"
+title: "total_members"
 description: 'Usage: `{{total_members}}`'
 ---
 
 ***
 
-### Description
 
 The total\_members helper outputs a rounded number of total members from your Ghost publication in a human readable format. Example:
 
