--- a/themes/helpers/data/total_paid_members.mdx
+++ b/themes/helpers/data/total_paid_members.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Total_paid_members"
+title: "total_paid_members"
 description: 'Usage: `{{total_paid_members}}`'
 ---
 
 ***
 
-### Description
 
 The total\_paid\_members helper outputs a rounded number of total paid members from your Ghost publication in a human readable format. Example:
 
