--- a/themes/helpers/data/url.mdx
+++ b/themes/helpers/data/url.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Url"
+title: "url"
 description: 'Usage: `{{url}}`'
 ---
 
 ***
 
-### Description
 
 `{{url}}` outputs the relative url for a post when inside the post scope.
 
