--- a/themes/helpers/functional/foreach.mdx
+++ b/themes/helpers/functional/foreach.mdx
@@ -1,11 +1,9 @@
 ---
-title: "Foreach"
+title: "foreach"
 description: 'Usage: `{{#foreach data}}{{/foreach}}`'
 ---
 
 ***
-
-## Description
 
 `{{#foreach}}` is a special loop helper designed for working with lists of posts. It can also iterate over lists of tags or users if needed. The foreach helper will output the content placed between its opening and closing tags `{{#foreach}}{{/foreach}}` once for each item in the collection passed to it.
 
