--- a/themes/helpers/functional/get.mdx
+++ b/themes/helpers/functional/get.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Get"
+title: "get"
 description: 'Usage: `{{#get "posts"}}{{/get}}`'
 ---
 
 ***
 
-## Description
 
 `{{#get}}` is a special block helper that makes a custom query to the Ghost API to fetch publicly available data. These requests are made server-side before your templates are rendered. This means you can fetch additional data, separate from what is provided by [default in each context](/themes/contexts/).
 
