--- a/themes/helpers/functional/if.mdx
+++ b/themes/helpers/functional/if.mdx
@@ -1,5 +1,5 @@
 ---
-title: "If"
+title: "if"
 description: 'Usage: `{{#if featured}}{{/if}}`'
 ---
 
@@ -7,7 +7,7 @@ description: 'Usage: `{{#if featured}}{{/if}}`'
 
 The `{{#if}}` block helper comes built in with Handlebars.
 
-### Description
+
 
 `{{#if}}` allows for testing very simple conditionals, and executing different template blocks depending on the outcome.
 
