--- a/themes/helpers/functional/is.mdx
+++ b/themes/helpers/functional/is.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Is"
+title: "is"
 description: 'Usage: `{{#is "contexts"}}`'
 ---
 
 ***
 
-### Description
+
 
 The `{{#is}}` helper allows you to check the context of the current route, i.e. is this the home page, or a post, or a tag listing page. This is useful when using shared partials or layouts, to output slightly different context in different places on your theme.
 
