--- a/themes/helpers/functional/match.mdx
+++ b/themes/helpers/functional/match.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Match"
+title: "match"
 description: 'Usage: `{{#match @custom.color_scheme "=" "Dark"}} class="dark-mode"{{/match}}`'
 ---
 
