--- a/themes/helpers/functional/unless.mdx
+++ b/themes/helpers/functional/unless.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Unless"
+title: "unless"
 description: 'Usage: `{{#unless featured}}{{/unless}}`'
 ---
 
@@ -7,7 +7,6 @@ description: 'Usage: `{{#unless featured}}{{/unless}}`'
 
 The `{{#unless}}` block helper comes built in with Handlebars.
 
-### Description
 
 `{{#unless}}` is essentially the opposite of `{{#if}}`. If you want to test a negative conditional only, i.e. if you only need the `{{else}}` part of an `{{#if}}` statement, then `{{#unless}}` is what you need.
 
