--- a/themes/helpers/utility/block.mdx
+++ b/themes/helpers/utility/block.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Block"
+title: "block"
 description: 'Usage: `{{{block "section"}}}` and `{{#contentFor "section"}} content {{/contentFor}}`'
 ---
 
 ***
 
-## Description
 
 `{{{block "block-name"}}}` is a helper for creating a placeholder within a custom handlebars template. Adding the helper along with a unique ID creates a slot within the template, which can be optionally filled when the template is inherited by another template file.
 
