--- a/themes/helpers/utility/body_class.mdx
+++ b/themes/helpers/utility/body_class.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Body_class"
+title: "body_class"
 description: 'Usage: `{{body_class}}`'
 ---
 
 ***
 
-### Description
 
 `{{body_class}}` – outputs dynamic CSS classes intended for the `<body>` tag in your `default.hbs` or other layout file, and is useful for targeting specific pages (or contexts) with styles.
 
