--- a/themes/helpers/utility/concat.mdx
+++ b/themes/helpers/utility/concat.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Concat"
+title: "concat"
 description: 'Usage: `{{concat "a" "b" "c"}}`'
 ---
 
 ***
 
-### Description
 
 The `{{concat}}` helper is designed to concatenate and link multiple things together.
 
