--- a/themes/helpers/utility/encode.mdx
+++ b/themes/helpers/utility/encode.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Encode"
+title: "encode"
 description: 'Usage: `{{encode value}}`'
 ---
 
 ***
 
-### Description
 
 `{{encode}}` is a simple output helper which will encode a given string so that it can be used in a URL.
 
