--- a/themes/helpers/utility/ghost_head_foot.mdx
+++ b/themes/helpers/utility/ghost_head_foot.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Ghost_head/Foot"
+title: "ghost_head & ghost_foot"
 description: 'Usage: `{{ghost_head}}` and `{{ghost_foot}}`'
 ---
 
 ***
 
-### Description
 
 These helpers output vital system information at the top and bottom of the document, and provide hooks to inject additional scripts and styles.
 
