--- a/themes/helpers/utility/log.mdx
+++ b/themes/helpers/utility/log.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Log"
+title: "log"
 description: 'Usage: `{{log value}}`'
 ---
 
 ***
 
-### Description
 
 When running Ghost in development mode, you can use the `{{log}}` helper to output debug messages to the server console. In particular you can get handlebars to output the details of objects or the current context
 
