--- a/themes/helpers/utility/pagination.mdx
+++ b/themes/helpers/utility/pagination.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Pagination"
+title: "pagination"
 description: 'Usage: `{{pagination}}`'
 ---
 
 ***
 
-## Description
 
 `{{pagination}}` is a template driven helper which outputs HTML for ’newer posts’ and ‘older posts’ links if they are available and also says which page you are on.
 
