--- a/themes/helpers/utility/partials.mdx
+++ b/themes/helpers/utility/partials.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Partials"
+title: "partials"
 description: 'Usage: `{{> "partial-name"}}`'
 ---
 
 ***
 
-## Description
 
 `{{> "partials"}}` is a helper for reusing chunks of template code in handlebars files. This can be useful for any repeating elements, such as a post card design, or for splitting out components like a header for easier to manage template files.
 
