--- a/themes/helpers/utility/plural.mdx
+++ b/themes/helpers/utility/plural.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Plural"
+title: "plural"
 description: 'Usage: `{{plural value empty="" singular="" plural=""}}`'
 ---
 
 ***
 
-### Description
 
 `{{plural}}` is a formatting helper for outputting strings which change depending on whether a number is singular or plural.
 
