--- a/themes/helpers/utility/post_class.mdx
+++ b/themes/helpers/utility/post_class.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Post_class"
+title: "post_class"
 description: 'Usage: `{{post_class}}`'
 ---
 
 ***
 
-### Description
 
 `{{post_class}}` outputs classes intended for your post container, useful for targeting posts with styles.
 
