--- a/themes/helpers/utility/reading_time.mdx
+++ b/themes/helpers/utility/reading_time.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Reading_time"
+title: "reading_time"
 description: 'Usage: `{{reading_time}}`'
 ---
 
 ***
 
-### Description
 
 `{{reading_time}}` renders the estimated reading time for a post.
 
