--- a/themes/helpers/utility/search.mdx
+++ b/themes/helpers/utility/search.mdx
@@ -1,11 +1,9 @@
 ---
-title: "Search"
+title: "search"
 description: 'Usage: `{{search}}`'
 ---
 
 ***
-
-## Description
 
 The `{{search}}` helper outputs a search icon button that launches Ghost search when clicked.
 
