--- a/themes/helpers/utility/translate.mdx
+++ b/themes/helpers/utility/translate.mdx
@@ -1,11 +1,9 @@
 ---
-title: "Translate"
+title: "translate"
 description: 'Usage: `{{t}}`'
 ---
 
 ***
-
-## Description
 
 `{{t}}` is a helper to output text in your site language.
 
