--- a/themes/helpers/data/authors.mdx
+++ b/themes/helpers/data/authors.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Authors"
+title: "authors"
 Usage: '`{{authors}}`'
 ---
 
 ***
 
-### Description
 
 `{{authors}}` is a formatting helper for outputting a linked list of authors for a particular post. It defaults to a comma-separated list (without list markup) but can be customised to use different separators, and the linking can be disabled. The authors are output in the order they appear on the post, these can be reordered by dragging and dropping.
 
