--- a/themes/helpers/data/config.mdx
+++ b/themes/helpers/data/config.mdx
@@ -1,5 +1,5 @@
 ---
-title: "@Config"
+title: "@config"
 description: The `@config` property provides access to global data properties, which are available anywhere in your theme.
 ---
 
