--- a/themes/helpers/data/custom.mdx
+++ b/themes/helpers/data/custom.mdx
@@ -1,5 +1,5 @@
 ---
-title: "@Custom"
+title: "@custom"
 description: The `@custom` property provides access to custom theme settings, which are available anywhere in your theme.
 ---
 
