--- a/themes/helpers/data/facebook.mdx
+++ b/themes/helpers/data/facebook.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Facebook"
+title: "facebook"
 description: 'Usage: `{{facebook_url}}` or `{{facebook_url @site.facebook}}` or `{{facebook_url "myfavouritepage"}}`'
 ---
 
 ***
 
-### Description
 
 This helper exists to make it easy to output a URL for a facebook page. Ghost has access two facebook page names/usernames for both users and for the site itself. When used without passing a username, the helper will look for a facebook username in the current template context, and then fallback to using `@site.facebook`.
 
