--- a/themes/helpers/data/navigation.mdx
+++ b/themes/helpers/data/navigation.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Navigation"
+title: "navigation"
 description: 'Usage: `{{navigation}}` and `{{navigation type="secondary"}}`'
 ---
 
 ***
 
-### Description
 
 `{{navigation}}` is a template-driven helper which outputs formatted HTML of menu items defined in the Ghost admin panel (Settings > Design > Navigation). By default, the navigation is marked up using a [preset template](https://github.com/TryGhost/Ghost/blob/3d989eba2371235d41468f7699a08e46fc2b1e87/ghost/core/core/frontend/helpers/tpl/navigation.hbs).
 
