--- a/themes/helpers/data/page.mdx
+++ b/themes/helpers/data/page.mdx
@@ -1,5 +1,5 @@
 ---
-title: "@Page"
+title: "@page"
 description: The `@page` object provides access to page properties, which are available anywhere in your theme.
 ---
 
