--- a/themes/helpers/data/readable_url.mdx
+++ b/themes/helpers/data/readable_url.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Readable Url"
+title: "readable_url"
 description: 'Usage: `{{readable_url URL}}`'
 ---
 
 ***
 
-## Description
 
 The `readable_url` helper outputs a human-readable URL by stripping out its protocol, www, query paramters, and hash fragments. It doesn’t strip out any subdomains or pathnames. This helper pairs well with the [`recommendations` helper](/themes/helpers/data/recommendations) to output more readable URLs.
 
@@ -18,7 +17,7 @@ See the examples below to understand the helper’s expected output:
 {{readable_url "www.google.com"}}
 <!-- removes "www". Outputs: "google.com" -->
 
-{{readable_url "https://google.com?foo=bar&dog=love"}} 
+{{readable_url "https://google.com?foo=bar&dog=love"}}
 <!-- removes query parameters. Outputs: "google.com" -->
 
 {{readable_url "https://google.com#section-1"}}
