--- a/themes/helpers/data/tags.mdx
+++ b/themes/helpers/data/tags.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Tags"
+title: "tags"
 description: 'Usage: `{{tags}}` or `{{#foreach tags}}{{/foreach}}` in `tag.hbs` you can use `{{#tag}}{{/tag}}` to access tag properties'
 ---
 
 ***
 
-### Description
 
 `{{tags}}` is a formatting helper for outputting a linked list of tags for a particular post. It defaults to a comma-separated list (without list markup) but can be customised to use different separators, and the linking can be disabled. The tags are output in the order they appear on the post, these can be reordered by dragging and dropping.
 
