--- a/themes/helpers/data/twitter.mdx
+++ b/themes/helpers/data/twitter.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Twitter"
+title: "twitter"
 description: 'Usage: `{{twitter_url}}` or `{{twitter_url @site.twitter}}` or `{{twitter_url "myfavouritepage"}}`'
 ---
 
 ***
 
-### Description
 
 This helper exists to make it easy to output a URL for a twitter page. Ghost has access to twitter page names/usernames for both users and for the site itself. When used without passing a username, the helper will look for a twitter username in the current template context, and then fallback to using `@site.twitter`.
 
