--- a/themes/helpers/utility/asset.mdx
+++ b/themes/helpers/utility/asset.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Asset"
+title: "asset"
 description: 'Usage: `{{asset "asset-path"}}`'
 ---
 
 ***
 
-### Description
 
 The `{{asset}}` helper exists to take the pain out of asset management. Firstly, it ensures that the relative path to an asset is always correct, regardless of how Ghost is installed. So if Ghost is installed in a subdirectory, the paths to the files are still correct, without having to use absolute URLs.
 
