--- a/themes/helpers/utility/prev_next_post.mdx
+++ b/themes/helpers/utility/prev_next_post.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Prev_post & Next_post"
+title: "prev_post & next_post"
 description: 'Usage: `{{#prev_post}}{{title}}{{/prev_post}}` - `{{#next_post}}{{title}}{{/next_post}}`'
 ---
 
 ***
 
-### Description
 
 When in the scope of a post, you can call the next or previous post helper, which performs a query against the API to fetch the next or previous post in accordance with the chronological order of the site.
 
