Updated images in Architecture
- Screenshots were very outdated in the Architecture page

--- a/architecture.mdx
+++ b/architecture.mdx
@@ -16,7 +16,7 @@ These three areas work together to make every Ghost site function smoothly, but 
 ### How things fit together
 
 <Frame>
-  <img src="/images/f4c07895-ghost-architecture_hu6c4bbd92be6e8f2ca966b7ab8d796eb5_275325_1000x0_resize_q100_h2_box_3.webp" />
+  <img src="/images/ghost-architecture.png" />
 </Frame>
 
 Physically, the Ghost codebase is structured in two main directories:
@@ -102,7 +102,7 @@ Thanks to its decoupled architecture Ghost is able to have the best of both worl
 Great for editors. Great for developers.
 
 <Frame>
-  <img src="/images/c823b4fd-ghost-admin_hu71133877b7ba98790d6379dca0b417de_69599_1421x0_resize_q100_h2_box_3.webp" />
+  <img src="/images/admin.png" />
 </Frame>
 
 ### Publishing workflow
@@ -110,7 +110,7 @@ Great for editors. Great for developers.
 Hacking together some Markdown files and throwing a static-site generator on top is nice in theory, but anyone who has tried to manage a content archive knows how quickly this falls apart even under light usage. What happens when you want to schedule a post to be published on Monday?
 
 <Frame>
-  <img src="/images/763387b5-publishing-workflow_hu46dc9229fc86b7d84b830ed2c4f822ed_23521_728x0_resize_q100_h2_box_3.webp" />
+  <img src="/images/publish.png" />
 </Frame>
 
 Great editorial teams need proper tools which help them be effective, which is why Ghost-Admin has all the standard editorial workflow features available at the click of a button. From inputting custom social and SEO data to customising exactly how and where content will be output.
@@ -120,7 +120,7 @@ Great editorial teams need proper tools which help them be effective, which is w
 Ghost Admin also comes with a world-class editor for authoring posts, which is directly tied to a rock-solid document storage format. More on that a bit later!
 
 <Frame>
-  <img src="/images/bfab12f9-ghost-admin-editor_hu2424779d321f8c77f888150ff83e2859_59570_1236x0_resize_q100_h2_box_3.webp" />
+  <img src="/images/editor.png" />
 </Frame>
 
 But, our default client app isn’t the only way to interact with content on the Ghost [Admin API](/admin-api/). You can send data into Ghost from pretty much anywhere, or even write your own custom admin client if you have a particular usecase which requires it.
