Remove markdown from bash commands

--- a/update-major-version.mdx
+++ b/update-major-version.mdx
@@ -31,7 +31,7 @@ Run `node -v` to check your node version.
 If less than 22, update node:
 
 ```bash
-curl -fsSL [https://deb.nodesource.com/setup_22.x](https://deb.nodesource.com/setup_22.x) | sudo -E bash -
+curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
 
 sudo apt-get install -y nodejs
 ```
