--- a/jamstack/eleventy.mdx
+++ b/jamstack/eleventy.mdx
@@ -101,26 +101,51 @@ This example retrieves posts from the API and adds them as a new [collection to 
 * Converting post date to a [JavaScript date object](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date) for easier manipulation in templates
 * Bring featured posts to the top of the list
 
+The maximum amount of items that can be fetched from a resource at once is 100, so use pagination to make sure all of the items are fetched:
 ```js
 config.addCollection("posts", async function(collection) {
-  collection = await api.posts
-    .browse({
-      include: "tags,authors", // Include tags as well as authors
-      limit: 100 // Get all posts to generate all content at build time
-    })
-    .catch(err => {
-      console.error(err);
-    });
+  try {
+    let page = 1;
+    let hasMore = true;
 
-  // Convert publish date into a Date object
-  collection.map(post => {
-    post.published_at = new Date(post.published_at);
-    return post;
-  });
+    while (hasMore) {
+      const posts = await api.posts.browse({
+        include: "tags,authors",
+        limit: 100,
+        page,
+      });
+
+      if (posts && posts.length > 0) {
+        collection.push(...posts.map((post) => ({
+          ...post,
+          url: stripDomain(post.url),
+          primary_author: {
+            ...post.primary_author,
+            url: stripDomain(post.primary_author.url)
+          },
+          tags: post.tags.map(tag => ({
+            ...tag,
+            url: stripDomain(tag.url)
+          })),
+          // Convert publish date into a Date object
+          published_at: new Date(post.published_at)
+        })));
+        // Use the meta pagination info to determine if there are more pages
+        page = posts.meta.pagination.next;
+        hasMore = page !== null;
+      } else {
+        hasMore = false;
+      }
+    }
 
   // Bring featured post to the top of the list
   collection.sort((post, nextPost) => nextPost.featured - post.featured);
-  return collection;
+  
+  return collection
+  } catch (error) {
+    console.error(error);
+    return [];
+  }
 });
 ```
 
@@ -135,17 +160,17 @@ config.addCollection("tags", async function(collection) {
   collection = await api.tags
     .browse({
       include: "count.posts", // Get the number of posts within a tag
-      limit: 100
+      limit: 100 // default is 15, max is 100 - use pagination for more
     })
     .catch(err => {
       console.error(err);
     });
 
-  // Get all posts with their tags attached
+  // Get up to 100 posts with their tags attached
   const posts = await api.posts
     .browse({
       include: "tags,authors",
-      limit: 100
+      limit: 100 // default is 15, max is 100 - use pagination for more
     })
     .catch(err => {
       console.error(err);
