Updated Nuxt links and name

--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -31,7 +31,7 @@ Ghost ships with a default front-end theme layer built with Handlebars, but base
     icon={<HexoLogo />}
   />
   <Card
-    title="Nuxt.js"
+    title="Nuxt"
     href="/jamstack/nuxt/"
     icon={<NuxtLogo />}
   />
