--- a/jamstack/nuxt.mdx
+++ b/jamstack/nuxt.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Working With Nuxt.Js"
-description: Learn how to spin up a JavaScript app using Ghost as a headless CMS and build a completely custom front-end with [Vue](https://vuejs.org/) and [Nuxt.js](https://nuxtjs.org/).
+title: "Working With Nuxt"
+description: Learn how to spin up a JavaScript app using Ghost as a headless CMS and build a completely custom front-end with [Vue](https://vuejs.org/) and [Nuxt](https://nuxt.com/).
 ---
 
 ***
@@ -13,7 +13,7 @@ description: Learn how to spin up a JavaScript app using Ghost as a headless CMS
 
 This configuration of a Ghost publication requires existing moderate knowledge of JavaScript as well as Vue.js. You’ll need an active Ghost account to get started, which can either be self-hosted or using [Ghost(Pro)](https://ghost.org/pricing/).
 
-Additionally, you’ll need to setup a Nuxt.js application via the command line:
+Additionally, you’ll need to setup a Nuxt application via the command line:
 
 ```bash
 yarn create nuxt-app my-nuxt-app
@@ -21,11 +21,11 @@ cd my-nuxt-app
 yarn dev
 ```
 
-To install Nuxt.js manually refer to the [official documentation](https://nuxtjs.org/guide/installation) for more information.
+To install Nuxt manually refer to the [official documentation](https://nuxt.com/docs/4.x/getting-started/installation) for more information.
 
 ## Getting started
 
-Thanks to the [JavaScript Content API Client Library](/content-api/javascript/), content from a Ghost site can be directly accessed within a Nuxt.js application.
+Thanks to the [JavaScript Content API Client Library](/content-api/javascript/), content from a Ghost site can be directly accessed within a Nuxt application.
 
 Create a new file called `posts.js` within an `api/` directory. This file will contain all the functions needed to request Ghost post content, as well as an instance of the Ghost Content API.
 
@@ -80,13 +80,13 @@ export async function getPosts() {
 }
 ```
 
-Using an `async` function means the Nuxt.js application will wait until all the content has been retrieved before loading the page. Since this function is being exported using the `export` notation, it will be available throughout the application.
+Using an `async` function means the Nuxt application will wait until all the content has been retrieved before loading the page. Since this function is being exported using the `export` notation, it will be available throughout the application.
 
 ### Rendering posts
 
-Since Nuxt.js is based on `.vue`, files can contain HTML, CSS and JavaScript to create a neatly packaged up component. For more information check out the [official Vue.js documentation](https://vuejs.org/v2/guide/single-file-components.html).
+Since Nuxt is based on `.vue`, files can contain HTML, CSS and JavaScript to create a neatly packaged up component. For more information check out the [official Vue.js documentation](https://vuejs.org/guide/scaling-up/sfc.html).
 
-To render out a list of posts from a Ghost site, create a new `index.vue` file within a `pages/` directory of your Nuxt.js project. Use the following code to expose the `getPosts` function within the `index.vue` file:
+To render out a list of posts from a Ghost site, create a new `index.vue` file within a `pages/` directory of your Nuxt project. Use the following code to expose the `getPosts` function within the `index.vue` file:
 
 ```vue
 <script>
@@ -96,7 +96,7 @@ To render out a list of posts from a Ghost site, create a new `index.vue` file w
 </script>
 ```
 
-The posts are provided as data to the rest of the `.vue` file using a [`asyncData` function](https://nuxtjs.org/api/) within the Nuxt.js framework:
+The posts are provided as data to the rest of the `.vue` file using a [`asyncData` function](https://nuxtjs.org/api/) within the Nuxt framework:
 
 ```vue
 <script>
@@ -111,7 +111,7 @@ The posts are provided as data to the rest of the `.vue` file using a [`asyncDat
 </script>
 ```
 
-Posts will now be available to use within that file and can be generated as a list using [Vue.js list rendering](https://vuejs.org/v2/guide/list.html):
+Posts will now be available to use within that file and can be generated as a list using [Vue.js list rendering](https://vuejs.org/guide/essentials/list.html):
 
 ```vue
 <template>
@@ -132,7 +132,7 @@ Posts will now be available to use within that file and can be generated as a li
 </script>
 ```
 
-For more information about how pages work, check out the [Nuxt.js pages documentation](https://nuxtjs.org/guide/views/#pages).
+For more information about how pages work, check out the [Nuxt pages documentation](https://nuxt.com/docs/4.x/getting-started/views#pages).
 
 ### Rendering a single post
 
@@ -154,7 +154,7 @@ export async function getSinglePost(postSlug) {
 
 This function accepts a single `postSlug` parameter, which will be passed down by the template file using it. The page slug can then be used to query the Ghost Content API and get the associated post data back.
 
-Nuxt.js provides [dynamic routes](https://nuxtjs.org/guide/routing/#dynamic-routes) for pages that don’t have a fixed URL/slug. The name of the js file will be the variable, in this case the post slug, prefixed with an underscore – `_slug.vue`.
+Nuxt provides [dynamic routes](https://nuxt.com/docs/4.x/guide/directory-structure/app/pages#dynamic-routes) for pages that don’t have a fixed URL/slug. The name of the js file will be the variable, in this case the post slug, prefixed with an underscore – `_slug.vue`.
 
 The `getSinglePost()` function can be used within the `_slug.vue` file like so:
 
@@ -190,19 +190,19 @@ The `<nuxt-link/>` component can be used with the `post.slug` to link to posts f
 </template>
 ```
 
-Pages are linked in this fashion to make full use of client-side rendering as well as server-side rendering. To read more about how the `<nuxt-link/>` component works, [check out the official documentation](https://nuxtjs.org/api/components-nuxt-link/).
+Pages are linked in this fashion to make full use of client-side rendering as well as server-side rendering. To read more about how the `<nuxt-link/>` component works, [check out the official documentation](https://nuxt.com/docs/4.x/api/components/nuxt-link).
 
 ## Next steps
 
-Well done! You should have now retrieved posts from the Ghost Content API and sent them to your Nuxt.js site. For examples of how to extend this further by generating content pages, author pages or exposing post attributes, read our useful recipes.
+Well done! You should have now retrieved posts from the Ghost Content API and sent them to your Nuxt site. For examples of how to extend this further by generating content pages, author pages or exposing post attributes, read our useful recipes.
 
-Don’t forget to refer to the [official Nuxt.js guides](https://nuxtjs.org/guide) and [API documentation](https://nuxtjs.org/api) to get a greater understanding of the framework.
+Don’t forget to refer to the [official Nuxt guides](https://nuxt.com/docs/4.x/guide) and [API documentation](https://nuxt.com/docs/4.x/api) to get a greater understanding of the framework.
 
 ## Examples
 
-The flexibility of the [Ghost Content API](/content-api/javascript/) allows you to feed posts, pages and any other pieces of content from any Ghost site into a Nuxt.js JavaScript app.
+The flexibility of the [Ghost Content API](/content-api/javascript/) allows you to feed posts, pages and any other pieces of content from any Ghost site into a Nuxt JavaScript app.
 
-Below are a few examples of how content from Ghost can be passed into a Nuxt.js project. If you just landed here, see the [Nuxt.js](/jamstack/nuxt/) page for more context!
+Below are a few examples of how content from Ghost can be passed into a Nuxt project. If you just landed here, see the [Nuxt](/jamstack/nuxt/) page for more context!
 
 ## Getting pages
 
@@ -277,7 +277,7 @@ A custom author template file can be created at `pages/authors/_slug.vue`, which
 
 ### Formatting post dates
 
-The published date of a post, `post.published_at`, is returned as a date timestamp. Modern JavaScript methods can convert this date into a selection of humanly readable formats. To output the published date as “Aug 28, 1963”:
+The published date of a post, `post.published_at`, is returned as a date timestamp. Modern JavaScript methods can convert this date into a selection of human-readable formats. To output the published date as “Aug 28, 1963”:
 
 ```js
 const posts = await getPosts();
@@ -298,4 +298,4 @@ The date can then be added to the Vue template using `{{post.dateFormatted}}`.
 
 ## Further reading
 
-Check out the extensive [Nuxt.js API documentation](https://nuxtjs.org/api) and [guide](https://nuxtjs.org/guide). Additionally the Nuxt.js site [lists a few examples](https://nuxtjs.org/examples) that can provide a great starting point.
+Check out the extensive [Nuxt API documentation](https://nuxt.com/docs/4.x/api) and [guide](https://nuxt.com/docs/4.x/guide). Additionally the Nuxt site [lists a few examples](https://nuxt.com/docs/4.x/examples/hello-world) that can provide a great starting point.
