Improved navigation for JAMstack pages

--- a/jamstack.mdx
+++ b/jamstack.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Ghost On The JAMstack"
-sidebarTitle: "JAMstack"
+sidebarTitle: "Overview"
 description: How to use Ghost as a headless CMS with popular static site generators
 ---
 import { GatsbyLogo } from '/snippets/gatsby.jsx';
