--- a/jamstack/custom.mdx
+++ b/jamstack/custom.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Building A Custom Front End For Ghost"
+sidebarTitle: "Custom"
 description: Build a completely custom front-end for your Ghost site with our Content API and [JavaScript Client](/content-api/javascript/)
 ---
 
