--- a/jamstack/eleventy.mdx
+++ b/jamstack/eleventy.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Working With Eleventy"
+sidebarTitle: "Eleventy"
 description: Build a completely custom front-end for your Ghost site with the flexibility of Static Site Generator [Eleventy](http://11ty.io).
 ---
 
