--- a/jamstack/gatsby.mdx
+++ b/jamstack/gatsby.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Working With Gatsby"
+sidebarTitle: "Gatsby"
 description: Build a custom front-end for your Ghost site with the power of Gatsby.js
 ---
 
