--- a/jamstack/next.mdx
+++ b/jamstack/next.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Working With Next.Js"
+sidebarTitle: "Next.js"
 description: Learn how to spin up a JavaScript app using Ghost as a headless CMS and build a completely custom front-end with the [Next.js](https://nextjs.org/) React framework.
 ---
 
