--- a/jamstack/nuxt.mdx
+++ b/jamstack/nuxt.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Working With Nuxt"
+sidebarTitle: "Nuxt"
 description: Learn how to spin up a JavaScript app using Ghost as a headless CMS and build a completely custom front-end with [Vue](https://vuejs.org/) and [Nuxt](https://nuxt.com/).
 ---
 
