--- a/jamstack/gridsome.mdx
+++ b/jamstack/gridsome.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Working With Gridsome"
+sidebarTitle: "Gridsome"
 description: Learn how to spin up a site using Ghost as a headless CMS and build a completely custom front-end with the static site generator Gridsome.
 ---
 
