--- a/jamstack/hexo.mdx
+++ b/jamstack/hexo.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Working With Hexo"
+sidebarTitle: "Hexo"
 description: Learn how to spin up a site using Ghost as a headless CMS and build a completely custom front-end with the static site generator [Hexo](https://hexo.io/).
 ---
 
