--- a/install/docker.mdx
+++ b/install/docker.mdx
@@ -311,11 +311,11 @@ If you get really stuck, post the details on https://forum.ghost.org.
 
 ## Tinybird Integration
 
-Note: there are no additional steps required for Tinybird to work, provided you’ve completed the [initial setup steps](https://www.notion.so/Ghost-6-0-Self-Hosting-Guide-20751439c030802aab77e7da43e0eb43?pvs=21) for traffic analytics.
+Note: there are no additional steps required for Tinybird to work, provided you’ve completed the [initial setup steps](/install/docker#install-ghost) for traffic analytics.
 
 ### Configuration
 
-Since Tinybird is a third party service that is running outside the Docker Compose network, we need to provide Ghost and the Traffic Analytics service a few pieces of configuration, so they can integrate properly with your Tinybird workspace. The initial setup of these configuration parameters is covered in the [initial setup steps](https://www.notion.so/Ghost-6-0-Self-Hosting-Guide-20751439c030802aab77e7da43e0eb43?pvs=21). The following provides some more information on what each required configuration parameter is, why it’s needed, and where you can find it.
+Since Tinybird is a third party service that is running outside the Docker Compose network, we need to provide Ghost and the Traffic Analytics service a few pieces of configuration, so they can integrate properly with your Tinybird workspace. The initial setup of these configuration parameters is covered in the [initial setup steps](/install/docker#install-ghost). The following provides some more information on what each required configuration parameter is, why it’s needed, and where you can find it.
 
 - `TINYBIRD_API_URL`: This is the API url for your Tinybird workspace, which Ghost uses to make requests to your Tinybird workspace’s endpoints. The value will vary depending on which cloud / region your workspace is hosted in. You can find this value by running `tb info` from the Tinybird CLI and using the value of the `api` key, or in the Tinybird UI by going to Endpoints, selecting any endpoint, and finding the full URL of the endpoint.
 - `TINYBIRD_ADMIN_TOKEN`: This is a token that is automatically created by Tinybird, which enables any operation in your workspace. You can find it in your Tinybird workspace’s UI under the “Tokens” tab, named “Workspace admin token”. Ghost uses the admin token to sign JWTs, which Ghost and Admin use to authenticate with Tinybird’s API endpoints.
@@ -326,13 +326,13 @@ Since Tinybird is a third party service that is running outside the Docker Compo
 
 The Ghost service itself contains the Tinybird datafiles, which define the schema of our datasources and the query logic that generates the materialized views, pipes and endpoints in the Tinybird workspace. When new versions of Ghost are shipped, there may be changes made to these files, and those changes will need to be deployed to your Tinybird workspace to be compatible with the incoming new version of Ghost.
 
-The `ghost-docker` repo includes handling for these “[migrations](https://www.notion.so/Ghost-6-0-Self-Hosting-Guide-20751439c030802aab77e7da43e0eb43?pvs=21)” to run automatically when running `docker compose up`. Provided you’ve followed the [initial setup instructions](https://www.notion.so/Ghost-6-0-Self-Hosting-Guide-20751439c030802aab77e7da43e0eb43?pvs=21) for traffic analytics, there shouldn't be any intervention required to update your Tinybird workspace when updating to a new version of Ghost.
+The `ghost-docker` repo includes handling for these “[migrations](/install/docker#migrating-a-ghost-cli-install)” to run automatically when running `docker compose up`. Provided you’ve followed the [initial setup instructions](/install/docker#install-ghost) for traffic analytics, there shouldn't be any intervention required to update your Tinybird workspace when updating to a new version of Ghost.
 
 #### How it works
 
 Here's an overview of what all is happening behind the scenes when updating to a new version of Ghost with changes to the Tinybird datafiles:
 
-1. When you run `docker compose pull` and `docker compose up -d`as part of the [normal upgrade process](https://www.notion.so/Ghost-6-0-Self-Hosting-Guide-20751439c030802aab77e7da43e0eb43?pvs=21), this will pull the latest version of the Ghost container to your host. This container includes the Tinybird datafiles.
+1. When you run `docker compose pull` and `docker compose up -d` as part of the [normal upgrade process](install/docker#updating-ghost), this will pull the latest version of the Ghost container to your host. This container includes the Tinybird datafiles.
 2. The `tinybird-login` container will run. Assuming you've already logged in to Tinybird as part of your initial setup, this service will noop. If you’re not logged in to Tinybird already for any reason, this service will fail, which means the Tinybird migrations did not run.
    1. If you're not logged in, run `docker compose run --rm tinybird-login` first, then run `docker compose up -d` again.
 3. After `tinybird-login` has completed successfully, the `tinybird-sync` service will run in the new Ghost container. This service copies the Tinybird files from the Ghost container into the `tinybird_files` volume, then exits.
