fix home styling

--- a/index.mdx
+++ b/index.mdx
@@ -6,7 +6,7 @@ description: Learn how to build and develop beautiful, independent publications
 ---
 
 <section className='max-w-8xl mx-auto h-full px-4 lg:px-12 py-4 text-black dark:text-white'>
-# Getting Started with Ghost
+<h1 className='text-2xl sm:text-3xl font-bold text-gray-900 tracking-tight dark:text-gray-200 mb-1'>Getting Started with Ghost</h1>
 
 <p>Learn how to build and develop beautiful, independent publications</p>
 
@@ -16,8 +16,8 @@ description: Learn how to build and develop beautiful, independent publications
 
 <div className='w-full flex flex-col-reverse md:flex-row justify-between items-center py-2'>
 <div className='md:w-1/2'>
-<h2 className='text-2xl font-bold'>Developer install guide</h2>
-<br />
+<h2 className='text-xl font-bold my-1 md:my-0 md:text-2xl'>Developer install guide</h2>
+<br className='hidden md:block'  />
 <p>Follow our setup guides for any platform, from local development to production environments.</p>
 <br />
 <a href="install/" className='p-2 rounded-md bg-primary text-primary-light border border-primary dark:border-primary-light dark:bg-primary-light dark:text-primary-dark'>Get Started →</a>
@@ -61,7 +61,7 @@ Docker
 
 <br />
 
-### Developer resources
+<h3 className='font-semibold text-xl'>Developer resources</h3>
 
 <CardGroup>
   <Card title="Starter theme framework" href="https://github.com/tryghost/starter" >
@@ -80,7 +80,7 @@ Docker
 
 <br />
 
-### Community
+<h3 className='font-semibold text-xl'>Community</h3>
 
 <CardGroup cols={3}>
   <Card horizontal title="GitHub" icon="github" href="https://github.com/tryghost" >
