add split helper documentation

--- a/themes/helpers/utility.mdx
+++ b/themes/helpers/utility.mdx
@@ -21,4 +21,5 @@ description: Utility helpers are used to perform minor, optional tasks. Use this
 | [prev\_post](/themes/helpers/utility/prev_next_post/) / [next\_post](/themes/helpers/utility/prev_next_post/)     | Within the `post` scope, returns the URL to the previous or next post            |
 | [reading\_time](/themes/helpers/utility/reading_time/)                                                         | Renders the estimated reading time for a post                                    |
 | [search](/themes/helpers/utility/search/)                                                                      | Output a working, pre-styled search button & icon                                |
+| [split](/themes/helpers/utility/split/)                                                                        | Split a string into one or more iterable strings                                 |
 | [translate](/themes/helpers/utility/translate/)                                                                | Output text in your site language (the backbone of i18n)                         |
