Fix typo in error message documentation

--- a/faq/python-setuptools-required-sqlite3.mdx
+++ b/faq/python-setuptools-required-sqlite3.mdx
@@ -7,7 +7,7 @@ description: Ghost local missing sqlite module due to Python & setuptools being 
 
 ### Error
 
-If you see etiher of these errors when using Ghost-CLI:
+If you see either of these errors when using Ghost-CLI:
 
 ```
 Python is required for SQLite3
