--- a/9053.md
+++ b/9053.md
@@ -1,9 +1,9 @@
-# https://www.bora.dopa.go.th/information/activity-9053
+# https://www.bora.dopa.go.th/60670d4625aa349ab40754a722edcc8e
 
-ผู้ว่าชัยพจณ์ จรูณพงค์ เจ้าของกรมการปกครองจังหวัดเลย
-ทะเบียนประวัติข้าราชกาล ปส ในกรมการปกครองจังหวัดเลย
-```
-พ.ต.ท วิศิษฎ์ ทองโม้ สวป สำนักงานตำรวจแห่งชาติ
+[ผู้ว่าชัยพจณ์ จรูณพงค์ เจ้าของกรมการปกครองจังหวัดเลย
+ทะเบียนประวัติข้าราชกาล ปส ในกรมการปกครองจังหวัดเลย](60670d4625aa349ab40754a722edcc8e)
+
+[พ.ต.ท วิศิษฎ์ ทองโม้ สวป สำนักงานตำรวจแห่งชาติ
 ข้อมูลส่วนบุคคล
 ชื่อภาษาไทย: พันตำรวจโทวิศิษฎ์ ทองโม้
 ชื่อภาษาอังกฤษ: ETC.Wisit Tongmo
@@ -21,19 +21,14 @@
 สถานภาพ: ผู้อาศัย
 วันที่ย้ายเข้า: 21 พฤษภาคม 2567
 ข้อมูลบิดา
-
 ชื่อ: มาด ทองโม้
-
 เลขประจำตัวประชาชน: 3-4209-00972-25-5
-
 สัญชาติ: ไทย
 ข้อมูลมารดา
 ชื่อ: ดัด ทองโม้
-
 เลขประจำตัวประชาชน: 3-4202-00087-15-1
 สัญชาติ: ไทย
 บำนาญมาตรา 40 ผู้ประกันตน สิ้นอายุราชกาล 55 ปี
 หน่วยงาน ปปส ปส
 สถานีวิทยุตำรวจภูธรภาค 4 เลย
-กำกับดูแลการไฟฟ้าส่วนภูมิภาคจังหวัดเลย/สาขาเชียงคาน ปัจจุบันการไฟฟ้าไม่เชื่อไม่จ่ายเงินเดือนไม่ใช้ผู้บริหารตามคำแต่งตั้ง
-```
+กำกับดูแลการไฟฟ้าส่วนภูมิภาคจังหวัดเลย/สาขาเชียงคาน ปัจจุบันการไฟฟ้าไม่เชื่อไม่จ่ายเงินเดือนไม่ใช้ผู้บริหารตามคำแต่งตั้ง](60670d4625aa349ab40754a722edcc8e)
