--- a/index.mdx
+++ b/index.mdx
@@ -20,7 +20,7 @@ description: Learn how to build and develop beautiful, independent publications
 <br className='hidden md:block'  />
 <p>Follow our setup guides for any platform, from local development to production environments.</p>
 <br />
-<a href="install/" className='p-2 rounded-md bg-primary text-light border border-primary dark:border-primary dark:bg-white dark:text-primary'>Get Started →</a>
+<a href="install/" className='p-2 rounded-md bg-primary text-white border border-primary dark:bg-primary dark:text-white dark:border-primary'>Get Started →</a>
 <br />
 <br />
 <div className='flex gap-3'>
