docs: fix broken #anchor link to "Enabling Web Analytics"

--- a/install/docker.mdx
+++ b/install/docker.mdx
@@ -282,7 +282,7 @@ The migration script doesn’t delete any data. After you’ve migrated you shou
 
 If you want to enable Web Analytics or ActivityPub, you can now follow the relevant sections from above:
 
-- [Enabling Web Analytics](install/docker#enabling-web-analytics)
+- [Enabling Web Analytics](/install/docker#enabling-web-analytics)
 - [Enabling Social Web (ActivityPub)](/install/docker#enabling-social-web-activitypub)
 
 ---
